Replanning strategies added